add filtering of web.rs annotated methods